flexbox no header, responsividade

--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body {
   background-color: bisque;
 }
 
+.Flex{
+  display: flex;
+  justify-content: space-between;
+  background-color:  #a9a9a9;
+}
+
 /* Ao topo do site */
 #topo {
   position: fixed;
@@ -36,6 +42,15 @@ body {
 }
 
 /*Smart Phone Portrait >>>>>>>>>>>>*/
+
+header{
+  height: 60px;
+}
+
+#logo img {
+  width: 128px;
+  height: 128px;
+}
 
 /*Smart Phone Landscape*/
 
@@ -75,4 +90,18 @@ body {
     .Container {
       max-width: 1140px;
     }
+
+    /* Cabeçalho */
+
+    header {
+      height: 120px;
+
+    }
+
+    #logo img {
+      width: 189px;
+      height: 189px;
+      margin: 30px;
+    }
 }
+
