--- a/style.css
+++ b/style.css
@@ -52,6 +52,39 @@ header{
   height: 128px;
 }
 
+#check {
+  display: none;
+}
+
+label {
+  font-size: 3em;;
+}
+
+nav ul{
+  list-style: none;
+  background-color: #343538;
+  height: 100vh;
+  position: fixed;
+  top: 60px;
+  right: -100%;
+  width: 50%;
+  transition: all 0.5s;
+}
+
+#check:checked ~ul{
+  right: 0;
+}
+
+nav ul li{
+  padding: 20px;
+  border-bottom: 1px solid #a9a9a9;
+}
+
+nav ul li a{
+  text-align: none;
+  color:#fff;
+}
+
 /*Smart Phone Landscape*/
 
 @media (min-width: 576px){
