ajustes de elementos e efeito paralax da sessão sobre

--- a/style.css
+++ b/style.css
@@ -115,13 +115,13 @@ main {
   background: url(img/banner.jpg);
   border: 1px solid;
 
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
     
 }
 main h1 {
@@ -233,6 +233,7 @@ main h2 {
 
   .Container {
     max-width: 1140px;
+    
   }
 
   /* Cabeçalho */
@@ -247,4 +248,19 @@ main h2 {
     height: 189px;
     margin: 30px;
   }
+
+  /* Sobre */
+  #sobre {
+    background-attachment: fixed;
+  }
+
+  #destaqueSobre {
+    display: inline;
+  }
+  #destaqueSobre img{
+    border-radius:50%;
+    
+    
+  }
+
 }
