--- a/style.css
+++ b/style.css
@@ -52,6 +52,16 @@ body {
   flex-wrap: wrap;
 }
 
+.Flex5{
+  display: flex;
+  flex-direction: column-reverse;
+}
+.Flex6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 /* Botão */
 .Botao {
   text-decoration: none;
@@ -269,6 +279,51 @@ main h2 {
   font-weight: 700;
   font-size: 1.25em;
 }
+/* Rodapé */
+
+address{
+  padding: 35px 10px 50px 10px;
+  background: url(img/background2.png);
+  background-size: cover;
+  background-position: center;
+  color: white;
+
+}
+
+address a{
+  text-decoration: none;
+  color: white;
+}
+
+address img{
+  padding-top: 15px;
+}
+#iconeLocal{
+  display: none;
+}
+
+#dados{
+  margin: 30px 0px 15px 0px;
+}
+
+#googleMaps {
+  display: none;
+}
+
+footer{
+  padding: 50px 0px;
+  background-color: #343538;
+  font-size: 0.875em;
+  color: #fff;
+  text-align: center;
+}
+footer a {
+  text-decoration: none;
+  color: #fff;
+}
+#social {
+  margin-bottom: 25px;
+}
 
 /*Smart Phone Landscape*/
 
@@ -291,6 +346,16 @@ main h2 {
 #video iframe {
   width: 560px;
   height: 315px;
+}
+
+/* Rodapé */
+.Flex5{
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+#social{
+  margin: 0;
 }
 
 }
@@ -394,6 +459,23 @@ main h2 {
   #qrcode img{
     width: 225px;
     height: 225px;
+  }
+    /* Rodapé */
+    .Flex6{
+      flex-direction: row-reverse;
+    }
+  address{
+    padding-top: 50px;
+  }
+  #iconeLocal{
+    display: inline;
+  }
+  #iconeMapa{
+    display: none;    
+  }
+
+  #googleMaps{
+    display: inline;
   }
 
 }
