--- a/style.css
+++ b/style.css
@@ -27,9 +27,6 @@ body {
 /*Layout  */
 .Container {
   margin: 0 auto;
-  border: 1px solid;
-  
-  border-color: black;
 
 }
 
@@ -142,7 +139,7 @@ nav ul {
   position: fixed;
   top: 60px;
   right: -100%;
-  width: 50%;
+  width: 30%;
   transition: all 0.5s;
 }
 
@@ -166,8 +163,6 @@ main {
   height: 75vh;
   /* a imagem do banner ocupou todo fundo, por isso a cor do fundo não aparece */
   background: url(img/banner.jpg);
-  border: 1px solid;
-
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -194,10 +189,7 @@ main h2 {
   padding: 50px 0;
   background: url(img/background.png);
   background-size: cover;
-  background-position: center;
- 
-  border: 1px solid;
-  border-color: rgb(58, 41, 41);
+  background-position: center; 
 }
 #destaqueSobre{
   display: none;
@@ -273,7 +265,7 @@ main h2 {
 
 #todos{
   margin-top: 50px;
-    text-align: center;
+  text-align: center;
 }
 #todos a{
   text-decoration: none;
@@ -330,11 +322,7 @@ footer a {
 /*Smart Phone Landscape*/
 
 @media (min-width: 576px) {
-  body {
-    background-color: #0ff;
-  }
-
-
+  
   .Container {
     max-width: 540px;
   }
@@ -364,19 +352,12 @@ footer a {
 
 /*Tablet Portrait*/
 @media (min-width: 768px) {
-  body {
-    background-color: #ff0;
-  }
-
+  
   .Container {
     max-width: 720px;
   }
 
-    /* Destaque */
-    main {
-      height: 45vh;
-  
-    }
+    
   
     main h1 {
       font-size: 5.5em;
@@ -390,26 +371,16 @@ footer a {
 
 /*Tablet Landscape*/
 @media(min-width:992px) {
-  body {
-    background-color: orangered;
-  }
-
+ 
   .Container {
     max-width: 960px;
   }
-
-  /* Destaque */
-  main {
-    height: 70vh;
-  }
+  
 }
 
 /*PC */
 @media(min-width:1200px) {
-  body {
-    background-color: #f00;
-  }
-
+  
   .Container {
     max-width: 1140px;
     
@@ -426,6 +397,32 @@ footer a {
     width: 189px;
     height: 189px;
     margin: 30px;
+  }
+  label {
+    display: none;
+  }
+  nav ul{
+    position:static;
+    height: auto;
+    background-color: transparent;
+    margin-top: 40px;
+    width: 100%;
+  }
+
+  nav ul li{
+    float: left;
+    border: 0;
+  }
+  nav ul li a{
+    color:#343538
+  }
+  nav ul li:hover{
+    color:#c00000;
+  }
+
+  /* Destaque */
+  main {
+    height: 70vh;
   }
 
   /* Sobre */
@@ -453,7 +450,7 @@ footer a {
 
   #wirefire span {
     display: inline;
-    text;
+   
   }
   #qrcode{
     display:inline;
